# my_shops

./: .gitignore  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  env.example
back/: .dockerignore  .flake8  alembic.ini  app.py  cli.py  config.py  exceptions.py  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 6c9a395a0482_init_db.py
back/api/: __init__.py  auth.py  me.py  photo.py  place.py  status.py  user.py  utils.py
back/auth/: __init__.py
back/docker/back/: Dockerfile-dev  Dockerfile-prod
back/docker/db/: Dockerfile
back/docker/nginx/: Dockerfile-dev  Dockerfile-prod  nginx-dev.conf  nginx-prod.conf
back/extensions/google/: __init__.py  caching.py  client.py  constants.py  exceptions.py  mixins.py
back/models/: __init__.py  base.py  db.py  helper.py  social.py  user.py
back/schemas/: base.py  place.py  social.py  user.py
back/scripts/: db.py  redis.py
back/test/: conftest.py  utils.py
back/test/api/: test_api_utils.py  test_auth_api.py  test_me.py  test_user_api.py
back/test/data/: dislike_data.json  like_data.json  place_data.json  user_data.json
back/test/extentions/: test_caching.py
back/test/models/: test_social_helpers.py  test_user_dislikes.py  test_user_helpers.py  test_user_password.py
back/test/schemas/: test_base_schema.py  test_place_schema.py  test_social_schema.py  test_user_schemas.py
back/test/utils/: test_coordinates.py
back/utils/config_class/: __init__.py  config.py
back/utils/geo/: __init__.py
back/utils/image/: __init__.py
front/: package-lock.json  package.json
(+53 files in other folders)
